ug EM-718: Fix for policy migration with IE8.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28737 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
@@ -473,11 +473,11 @@
                     </div>
                 </td>
                 <td class="srcDestCenter">
-                    <form wicket:id="migrateForm">
+                    <form wicket:id="migrateForm" onsubmit="return false;"> <!-- Prevents non-ajax submission in IE8 -->
                         <button wicket:id="migrateButton"><img src="../images/copy.png" title="Migrate selected policies with dependency mapping" alt="" id="migrateImage"></button>
                     </form>
                     <br/>
-                    <form wicket:id="identifyDependenciesForm">
+                    <form wicket:id="identifyDependenciesForm" onsubmit="return false;"> <!-- Prevents non-ajax submission in IE8 -->
                         <button wicket:id="identifyDependenciesButton"><img src="../images/resolveDependencies.png" title="Identify dependencies" alt="" id="identifyDependenciesImage"></button>
                      </form>
                 </td>
