ug EM-727: Fix for ESM monitoring: Notification rule is not displayed properly when it has a long name in IE8.0.7600.16385
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28743 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Monitor.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Monitor.html
@@ -2178,7 +2178,7 @@
                     <td class="note">
                         <div class="note">Select the rules to use (Ctrl-Click for multiple or to deselect).</div>
                         <div class="note">The selected rules apply to the entire cluster and its nodes.</div>
-                        <select id="monDlg_notificationRulesListBox" multiple="multiple" size="5" style="width: 100%">
+                        <select id="monDlg_notificationRulesListBox" multiple="multiple" size="5" style="min-width: 100%">
                         </select>
                     </td>
                 </tr>
