ug EM-732: Fix for ESM policy migration: Scroll bars are displayed in Item Dependencies panel when there's only one dependency identified on IE8
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28756 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigration.html
@@ -531,7 +531,7 @@
             <tr>
                 <td class="srcDestBottom" style="padding-top: 0;">
                     <div id="srcItemDiv" style="border: 1px solid #606060; overflow: scroll; height: 150px" class="dataIFrame">
-                        <div id="srcItemDetailsDiv" style="overflow: auto">
+                        <div id="srcItemDetailsDiv" style="overflow: visible">
                             <table class="dataTable" wicket:id="srcItemDetails" width="100%">
                                 <thead>
                                     <tr>
@@ -545,7 +545,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div id="srcItemDependenciesDiv" style="overflow: auto">
+                        <div id="srcItemDependenciesDiv" style="overflow: visible">
                             <table class="dataTable" wicket:id="srcItemDependencies" width="100%">
                                 <thead>
                                     <tr>
@@ -568,7 +568,7 @@
                 <td class="srcDestCenter"></td>
                 <td class="srcDestBottom" style="padding-top: 0;">
                     <div id="destItemDiv" style="border: 1px solid #606060; overflow: scroll; height: 150px" class="dataIFrame">
-                        <div id="destItemDetailsDiv" style="overflow: auto">
+                        <div id="destItemDetailsDiv" style="overflow: visible">
                             <table class="dataTable" wicket:id="destItemDetails" width="100%">
                                 <thead>
                                     <tr>
@@ -582,7 +582,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div id="destItemDependenciesDiv" style="overflow: auto">
+                        <div id="destItemDependenciesDiv" style="overflow: visible">
                             <table class="dataTable" wicket:id="destItemDependencies" width="100%">
                                 <thead>
                                     <tr>
