--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Monitor.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Monitor.html
@@ -1042,65 +1042,65 @@
 
         function refreshMonitoringProperties() {
             var nextRefreshInterval = DEFAULT_MONITORING_PROPERTIES_REFRESH_INTERVAL;
-            var xhr;
-            var xhrException;
-            var result;
-            try {
-                xhr = l7.Connection.syncRequest('GET', getCurrentEntitiesPropertyValuesUrl, null, false);
-                result = l7.Connection.parseJsonResponse(xhr, false, null, null, localizedStrings.SESSION_TIMEOUT);
-            } catch (e) {
-                xhrException = e;
-            }
-            if (result && result.success) {
-                // Flashes the traffic icon for 400ms.
-                refreshMonitoringProperties_collapsedHeaders_trafficImg.style.visibility = "visible";
-                refreshMonitoringProperties_steppedHeaders_trafficImg.style.visibility = "visible";
-                setTimeout('hideTrafficImages();', 400);
+            l7.Connection.asyncRequest('GET', getCurrentEntitiesPropertyValuesUrl, null, false, function( xhr ){
+                var xhrException;
+                var result;
+                try {
+                    result = l7.Connection.parseJsonResponse(xhr, false, null, null, localizedStrings.SESSION_TIMEOUT);
+                } catch (e) {
+                    xhrException = e;
+                }
+                if (result && result.success) {
+                    // Flashes the traffic icon for 400ms.
+                    refreshMonitoringProperties_collapsedHeaders_trafficImg.style.visibility = "visible";
+                    refreshMonitoringProperties_steppedHeaders_trafficImg.style.visibility = "visible";
+                    setTimeout('hideTrafficImages();', 400);
 
-                entityTreeTable.setAllMonitoredPropertyValuesToStale();
-                if (result.json.entities) {
-                    for (var i = 0; i < result.json.entities.length; ++i) {
-                        var entity = result.json.entities[i];
-                        if (entity.monitoringProperties) {
-                            for (var propertyType in entity.monitoringProperties) {
-                                entityTreeTable.setMonitoredProperty(entity.id, propertyType, entity.monitoringProperties[propertyType]);
+                    entityTreeTable.setAllMonitoredPropertyValuesToStale();
+                    if (result.json.entities) {
+                        for (var i = 0; i < result.json.entities.length; ++i) {
+                            var entity = result.json.entities[i];
+                            if (entity.monitoringProperties) {
+                                for (var propertyType in entity.monitoringProperties) {
+                                    entityTreeTable.setMonitoredProperty(entity.id, propertyType, entity.monitoringProperties[propertyType]);
+                                }
                             }
                         }
+                        resetCollapsedHeaderWidths();
                     }
-                    resetCollapsedHeaderWidths();
-                }
 
-                if (result.json.nextRefreshInterval) {
-                    nextRefreshInterval = result.json.nextRefreshInterval;
-                }
-            } else {
-                // Flashes the error icon for 400ms.
-                var toolTip = 'Unable to refresh monitored property values';
-                if (xhrException || (result && !result.success && !result.isException && !result.isJson && !result.isSessionExpired)) {
-                    // Because the exception name and message is mysteriously worded,
-                    // we won't display that.
-                    toolTip += ': cannot communicate with server';
-                } else if (result.isException) {
-                    if (result.json) {
-                        if (result.json.localizedMessage) {
-                            toolTip += ': ' + result.json.localizedMessage;
-                        } else if (result.json.message) {
-                            toolTip += ': ' + result.json.message;
-                        }
+                    if (result.json.nextRefreshInterval) {
+                        nextRefreshInterval = result.json.nextRefreshInterval;
                     }
                 } else {
-                    toolTip += ': ' + xhr.status + ' ' + xhr.statusText;
-                } // No need to display session timeout because l7.Connection.parseJsonResponse would have popped up a dialog.
-                refreshMonitoringProperties_collapsedHeaders_errorImg.title = toolTip;
-                refreshMonitoringProperties_steppedHeaders_errorImg.title = toolTip;
-                refreshMonitoringProperties_collapsedHeaders_errorImg.style.visibility = "visible";
-                refreshMonitoringProperties_steppedHeaders_errorImg.style.visibility = "visible";
-            }
-            if (result && result.isSessionExpired) {
-                // Don't refresh any more.
-            } else {
-                setTimeout('refreshMonitoringProperties()', 1000 * nextRefreshInterval);
-            }
+                    // Flashes the error icon for 400ms.
+                    var toolTip = 'Unable to refresh monitored property values';
+                    if ( (result && !result.success && !result.isException && !result.isJson && !result.isSessionExpired)) {
+                        // Because the exception name and message is mysteriously worded,
+                        // we won't display that.
+                        toolTip += ': cannot communicate with server';
+                    } else if (result.isException) {
+                        if (result.json) {
+                            if (result.json.localizedMessage) {
+                                toolTip += ': ' + result.json.localizedMessage;
+                            } else if (result.json.message) {
+                                toolTip += ': ' + result.json.message;
+                            }
+                        }
+                    } else {
+                        toolTip += ': ' + xhr.status + ' ' + xhr.statusText;
+                    } // No need to display session timeout because l7.Connection.parseJsonResponse would have popped up a dialog.
+                    refreshMonitoringProperties_collapsedHeaders_errorImg.title = toolTip;
+                    refreshMonitoringProperties_steppedHeaders_errorImg.title = toolTip;
+                    refreshMonitoringProperties_collapsedHeaders_errorImg.style.visibility = "visible";
+                    refreshMonitoringProperties_steppedHeaders_errorImg.style.visibility = "visible";
+                }
+                if (result && result.isSessionExpired) {
+                    // Don't refresh any more.
+                } else {
+                    setTimeout('refreshMonitoringProperties()', 1000 * nextRefreshInterval);
+                }
+            });
         }
 
         function loadMonitoringSetup() {
