ug EM-757: Clean up previous commit and change polling of PC to skip nodes that are known to be offline.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@30212 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Monitor.html
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/Monitor.html
@@ -1075,7 +1075,7 @@
                 } else {
                     // Flashes the error icon for 400ms.
                     var toolTip = 'Unable to refresh monitored property values';
-                    if ( (result && !result.success && !result.isException && !result.isJson && !result.isSessionExpired)) {
+                    if ( xhrException || (result && !result.success && !result.isException && !result.isJson && !result.isSessionExpired) ) {
                         // Because the exception name and message is mysteriously worded,
                         // we won't display that.
                         toolTip += ': cannot communicate with server';
